--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <body>
   <h1>Contact us</h1>
   <form data-static-form-name="contact">
+    <label>Name <textarea name="name"></textarea></label>
+    <label>Phone <textarea name="phone"></textarea></label>    
     <label>Email address <input type="email" name="email" /></label>
     <label>Message <textarea name="message"></textarea></label>
     <button type="Submit">
