--- a/index.html
+++ b/index.html
@@ -1,47 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Contact Us</title>
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-		}
-		label {
-			display: block;
-			margin-bottom: 10px;
-		}
-		input[type="text"],
-		input[type="email"],
-		textarea {
-			width: 100%;
-			padding: 8px;
-			border: 1px solid #ccc;
-			border-radius: 4px;
-			box-sizing: border-box;
-			margin-bottom: 16px;
-			resize: vertical;
-		}
-		input[type="submit"] {
-			background-color: #4CAF50;
-			color: white;
-			padding: 12px 20px;
-			border: none;
-			border-radius: 4px;
-			cursor: pointer;
-		}
-		input[type="submit"]:hover {
-			background-color: #45a049;
-		}
-	</style>
-</head>
-<body>
-  <h1>Contact us</h1>
-  <form data-static-form-name="contact">
-    <label>Name <textarea name="name"></textarea></label>
-    <label>Phone <textarea name="phone"></textarea></label>    
-    <label>Email address <input type="email" name="email" /></label>
-    <label>Message <textarea name="message"></textarea></label>
-    <button type="Submit">
-  </form>
-</body>
+  <body>
+    <h1>Contact</h1>
+    <form data-static-form-name="contact">
+      <div>
+        <label>Name<input type="text" name="name" /></label>
+      </div>
+      <div>
+        <label>Email<input type="email" name="email" /></label>
+      </div>
+      <div>
+        <label>Message<textarea name="message"></textarea></label>
+      </div>
+      <button type="submit">Send!</button>
+    </form>
+  </body>
 </html>
